--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
@@ -44,10 +44,17 @@
     class="mdl-cell mdl-cell--2-col m-networkBridgeTxHistoryItem-container-arrow"
     *ngIf="isSuccess(item)"
   >
-    <i
-      class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color "
-      >call_made</i
+    <a
+      *ngIf="getExplorerUrl(item)"
+      [href]="getExplorerUrl(item)"
+      target="_blank"
     >
+      <i
+        (click)="getExplorerUrl(item)"
+        class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color "
+        >call_made</i
+      >
+    </a>
   </div>
   <div
     class="mdl-cell mdl-cell--2-col m-networkBridgeTxHistoryItem-container-arrow"
