--- a/src/app/common/components/publisher-card/publisher-card.component.ng.scss
+++ b/src/app/common/components/publisher-card/publisher-card.component.ng.scss
@@ -114,7 +114,7 @@
 
     .m-publisherCardOwnerRow__owner {
       max-width: 100%;
-      width: calc(100% - 185px);
+      width: calc(100% - 195px);
 
       > div {
         display: flex;
@@ -153,7 +153,9 @@
     }
     ::ng-deep {
       m-subscribeButton {
-        flex: auto 0 0;
+        flex: auto 1 0;
+        display: flex;
+        justify-content: flex-end;
         ::ng-deep m-button {
           .m-button i {
             font-size: 16px !important;
