--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
@@ -22,7 +22,7 @@
   >
     <div>
       <span class="m-networkBridgeTxHistoryItem-container-text-bold">{{
-        item.__typename
+        isDeposit(item) ? 'Deposit' : 'Withdraw'
       }}</span>
       <span class="m-networkBridgeTxHistoryItem-container-text-light">
         · {{ formatDate(item.timestamp) }}
