--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/network-bridge-tx-history.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/network-bridge-tx-history.component.html
@@ -46,12 +46,22 @@
   </ul>
 
   <!-- m-networkBridgeTxHistoryItem list -->
-  <div class="m-networkSwapTxHistory__body" *ngIf="!isLoading">
+  <div
+    class="m-networkSwapTxHistory__body"
+    *ngIf="!isLoading && (filteredItems$ | async).length > 0"
+  >
     <m-networkBridgeTxHistoryItem
       *ngFor="let item of filteredItems$ | async"
       [item]="item"
     >
     </m-networkBridgeTxHistoryItem>
+  </div>
+
+  <div
+    class="m-networkSwapTxHistory__body"
+    *ngIf="!isLoading && (filteredItems$ | async).length === 0"
+  >
+    <span> No {{ formatState() }} transactions</span>
   </div>
   <m-loadingSpinner [inProgress]="isLoading"></m-loadingSpinner>
 </div>
