--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
@@ -60,7 +60,25 @@
     class="mdl-cell mdl-cell--2-col m-networkBridgeTxHistoryItem-container-arrow"
     *ngIf="isPendingAction(item)"
   >
-    <i class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color"
+    <a
+      *ngIf="getExplorerUrl(item)"
+      [href]="getExplorerUrl(item)"
+      target="_blank"
+    >
+      <i
+        class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color"
+        >chevron_right</i
+      >
+    </a>
+  </div>
+
+  <div
+    class="mdl-cell mdl-cell--2-col m-networkBridgeTxHistoryItem-container-arrow"
+    *ngIf="isActionRequired(item)"
+  >
+    <i
+      (click)="exit(item)"
+      class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color"
       >chevron_right</i
     >
   </div>
