standardize sidebar components for newsfeed and discovery

--- a/src/app/modules/ads/ads.ng.scss
+++ b/src/app/modules/ads/ads.ng.scss
@@ -6,4 +6,14 @@
       overflow: visible;
     }
   }
+
+  .m-adsBoost__header {
+    margin: 0;
+    font-size: 13px;
+    font-weight: 600;
+    padding: 0 8px;
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+    }
+  }
 }
