--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -18,7 +18,13 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <!-- SIDEBAR ------------------------------------->
-        <m-onboardingProgressWidget></m-onboardingProgressWidget>
+        <m-discovery__disclaimer
+          *ngIf="!session.isLoggedIn()"
+        ></m-discovery__disclaimer>
+
+        <m-onboardingProgressWidget
+          *ngIf="session.isLoggedIn()"
+        ></m-onboardingProgressWidget>
 
         <m-language__sidebarPrompt></m-language__sidebarPrompt>
 
