--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngIf="isV2; else v1">
+<ng-container m-clientMeta *ngIf="isV2; else v1">
+  <!-- TODO: add m-clientMeta to activityV2 if v2 flag becomes permanent -->
   <m-activityV2
     [entity]="entity$ | async"
     [canDelete]="canDelete"
