Remove HomePageV2 component / experiment and refactor out usage #5400

--- a/src/app/modules/mobile/marketing/marketing.component.ng.scss
+++ b/src/app/modules/mobile/marketing/marketing.component.ng.scss
@@ -1,6 +1,8 @@
 @import 'defaults.scss';
 
 :host {
+  padding: 0 20px;
+
   .m-aux__hero {
     background-image: url('../../../../assets/product-pages/nodes/nodes-1.jpg');
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.2);
