--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-panel/network-bridge-panel-modal.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-panel/network-bridge-panel-modal.ng.scss
@@ -1,8 +1,8 @@
 @import 'defaults.scss';
 
 ::ng-deep .modal-content--bridge {
-  min-width: 710px;
-  max-height: 526px;
+  min-height: 526px;
+  max-width: 710px;
 }
 
 :host {
