--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/bridge-transfer/network-bridge-transfer.ng.scss
@@ -1,9 +1,8 @@
 @import 'defaults.scss';
 
 ::ng-deep .modal-content--swap {
-  min-width: 710px;
-  max-height: 526px;
-  height: 526px;
+  min-height: 526px;
+  max-width: 710px;
 
   .modal-content {
     height: inherit;
