--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/withdraw-transaction-state/withdraw-transaction-state.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/withdraw-transaction-state/withdraw-transaction-state.component.html
@@ -15,9 +15,7 @@
         <i class="m-networkPending_stepper-circle">
           <i class="material-icons m-networkPending-approve">done</i>
         </i>
-        <span class="m-networkPending_stepper-label">{{
-          states[0] | titlecase
-        }}</span>
+        <span class="m-networkPending_stepper-label">Initialized</span>
       </div>
 
       <div class="m-networkPending_stepper-connector" aria-hidden="true">
@@ -28,18 +26,17 @@
         id="step2"
         class="m-networkPending_stepper-item m-networkPending_step-current"
       >
-        <i class="m-networkPending_stepper-circle" *ngIf="proposalState === 0">
-          &nbsp;</i
+        <i class="m-networkPending_stepper-circle" *ngIf="proposalState <= 2"
+          >&nbsp;</i
         >
-        <i
-          class="m-networkPending_stepper-circle"
-          *ngIf="proposalState === 1 || proposalState === 2"
-        >
-          <i class="material-icons m-networkPending-approve">done</i>
+        <i class="m-networkPending_stepper-circle" *ngIf="proposalState >= 3">
+          <i
+            class="material-icons"
+            [class.m-networkPending-approve]="proposalState <= 2"
+            >done</i
+          >
         </i>
-        <span class="m-networkPending_stepper-label">{{
-          states[1] | titlecase
-        }}</span>
+        <span class="m-networkPending_stepper-label">Withdraw</span>
       </div>
 
       <div class="m-networkPending_stepper-connector" aria-hidden="true">
@@ -50,44 +47,52 @@
         id="step3"
         class="m-networkPending_stepper-item m-networkPending_step-last-complete"
       >
-        <i
-          class="m-networkPending_stepper-circle"
-          *ngIf="proposalState === 0 || proposalState === 1"
+        <i class="m-networkPending_stepper-circle" *ngIf="proposalState <= 2"
           >&nbsp;</i
         >
-        <i class="m-networkPending_stepper-circle" *ngIf="proposalState === 2">
+        <i class="m-networkPending_stepper-circle" *ngIf="proposalState >= 3">
           <i class="material-icons m-networkPending-approve">done</i>
         </i>
-        <span class="m-networkPending_stepper-label">{{
-          states[2] | titlecase
-        }}</span>
+        <span class="m-networkPending_stepper-label">Complete</span>
       </div>
     </div>
   </div>
 
-  <div class="m-networkPending-loader">
+  <div class="m-networkPending-image">
     <m-loadingSpinner
       [inProgress]="true"
-      *ngIf="proposalState === 0"
+      *ngIf="proposalState === 2"
     ></m-loadingSpinner>
+    <i
+      *ngIf="proposalState === 1 || proposalState === 0"
+      class="material-icons m-networkPending-priority"
+    >
+      radio_button_unchecked
+    </i>
+    <i
+      class="material-icons m-networkPending-priority"
+      *ngIf="proposalState === 3"
+    >
+      check_circle
+    </i>
   </div>
-  <i
-    class="material-icons m-networkPending-priority"
-    *ngIf="proposalState === 2"
-    >check_circle</i
-  >
-  <i
-    class="material-icons m-networkPending-priority"
-    *ngIf="proposalState === 1"
-    >compare_arrows</i
-  >
 
   <span class="m-networkPending-state">{{ getTitles() }} </span>
   <span class="m-networkPending-content" (click)="changeState()">
     {{ getDescription() }}
   </span>
 
-  <span class="m-networkPending-link" *ngIf="proposalState !== 0"
-    >View transaction
-  </span>
+  <div class="m-networkPending-btn">
+    <m-button
+      color="primary"
+      (onAction)="handleTransaction()"
+      *ngIf="proposalState === 1"
+    >
+      Continue
+    </m-button>
+  </div>
+
+  <a class="m-networkPending-link" [href]="txLink" *ngIf="proposalState === 3">
+    View transaction
+  </a>
 </div>
