--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/network-bridge-tx-history.ng.scss
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/network-bridge-tx-history.ng.scss
@@ -1,9 +1,8 @@
 @import 'defaults.scss';
 
 ::ng-deep .modal-content--history {
-  min-width: 710px;
-  max-height: 526px;
-  height: 526px;
+  min-height: 526px;
+  max-width: 710px;
 
   .modal-content {
     height: inherit;
@@ -66,12 +65,12 @@
     }
 
     .m-networkSwapTxHistory__body {
-      padding: 17px 40px;
-      display: inline-grid;
-      width: 100%;
-      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      padding: 16px 40px;
       overflow: scroll;
-      max-height: 350px;
+      height: 350px;
     }
   }
 }
