--- a/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/bridge/components/tx-history/tx-history-item/network-bridge-tx-history-item.component.html
@@ -18,24 +18,24 @@
     >
   </div>
   <div
-    class="mdl-cell mdl-cell--7-col m-networkBridgeTxHistoryItem-container-text "
+    class="mdl-cell mdl-cell--6-col m-networkBridgeTxHistoryItem-container-text "
   >
     <div>
       <span class="m-networkBridgeTxHistoryItem-container-text-bold">{{
-        isDeposit(item) ? 'Deposit' : 'Withdraw'
+        isWithdraw(item) ? 'Withdraw' : 'Deposit'
       }}</span>
       <span class="m-networkBridgeTxHistoryItem-container-text-light">
         · {{ formatDate(item.timestamp) }}
       </span>
     </div>
     <span class="m-networkBridgeTxHistoryItem-container-text-light">
-      {{ item.status | titlecase }} ·
+      {{ formatStatus(item.status) | titlecase }} ·
       {{
-        isDeposit(item) ? 'From Mainnet to Polygon' : 'From Polygon to Mainnet'
+        isWithdraw(item) ? 'From Polygon to Mainnet' : 'From Mainnet to Polygon'
       }}
     </span>
   </div>
-  <div class="mdl-cell mdl-cell--2-col">
+  <div class="mdl-cell mdl-cell--3-col">
     <span class="m-networkBridgeTxHistoryItem-container-amount"
       >{{ formatAmount(item.amount) }} Minds</span
     >
@@ -59,6 +59,15 @@
   <div
     class="mdl-cell mdl-cell--2-col m-networkBridgeTxHistoryItem-container-arrow"
     *ngIf="isPendingAction(item)"
+  >
+    <i class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color"
+      >chevron_right</i
+    >
+  </div>
+  <div
+    class="mdl-cell mdl-cell--2-col m-networkBridgeTxHistoryItem-container-arrow"
+    (click)="handleClick()"
+    *ngIf="isActionRequired(item)"
   >
     <i class="material-icons m-networkBridgeTxHistoryItem-container-arrow-color"
       >chevron_right</i
