scroll to under the boost rotator

--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -100,4 +100,5 @@
 <m-seeLatestPostsButton
   *mExperiment="'front-4089-polling'; variation: true"
   [feedService]="feedService"
+  (onClick)="scrollToUnderBoostRotator()"
 ></m-seeLatestPostsButton>
