--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -98,9 +98,11 @@
 </div>
 
 <ng-container *ngIf="algorithm === 'latest'">
-  <m-seeLatestPostsButton
-    *mExperiment="'front-4089-polling'; variation: true"
-    [feedService]="feedService"
-    (onClick)="scrollToUnderBoostRotator()"
-  ></m-seeLatestPostsButton>
+  <ng-container *mIfBrowser>
+    <m-seeLatestPostsButton
+      *mExperiment="'front-4089-polling'; variation: true"
+      [feedService]="feedService"
+      (onClick)="scrollToUnderBoostRotator()"
+    ></m-seeLatestPostsButton>
+  </ng-container>
 </ng-container>
