add regenerative recommendations

--- a/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
+++ b/src/app/modules/suggestions/channel-recommendation/channel-recommendation.component.html
@@ -10,7 +10,10 @@
     >
   </header>
   <ul *ngIf="(recommendations$ | async).length">
-    <li *ngFor="let channel of recommendations$ | async">
+    <li
+      @listAnimation
+      *ngFor="let channel of recommendations$ | async | slice: 0:3"
+    >
       <section>
         <a
           [routerLink]="['/', channel.username]"
@@ -44,6 +47,7 @@
             subscribedIcon="check"
             sized="true"
             iconOnly="true"
+            (subscribed)="onSubscribed($event)"
           ></m-subscribeButton>
         </div>
       </section>
