--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -44,6 +44,7 @@
           <m-newsfeed--boost-rotator
             *ngIf="showBoostRotator"
             #feedViewChildren
+            #boostRotator
           ></m-newsfeed--boost-rotator>
         </ng-container>
       </ng-container>
