change name to be more angulary

--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -103,7 +103,7 @@
     <m-seeLatestPostsButton
       *mExperiment="'front-4089-polling'; variation: true"
       [feedService]="feedService"
-      (onClick)="scrollToUnderBoostRotator()"
+      (click)="scrollToUnderBoostRotator()"
     ></m-seeLatestPostsButton>
   </ng-container>
 </ng-container>
