--- a/src/app/modules/newsfeed/activity/activity.component.scss
+++ b/src/app/modules/newsfeed/activity/activity.component.scss
@@ -13,7 +13,7 @@ m-activity {
   }
 
   &:not(.m-activity--v2) {
-    .m-activity--fixedHeight {
+    &.m-activity--fixedHeight {
       height: 750px;
       display: flex;
       flex-direction: column;
@@ -47,7 +47,7 @@ m-activity {
 }
 
 .m-activity--fixedHeightContainer {
-  height: 100%;
+  height: 100% !important;
   width: 100%;
 }
 
