(fix): do not apply additional padding tro tophighlights

--- a/src/app/modules/newsfeed/feeds/top-highlights/top-highlights.component.ng.scss
+++ b/src/app/modules/newsfeed/feeds/top-highlights/top-highlights.component.ng.scss
@@ -47,8 +47,8 @@
   .m-topHighlights__title {
     font-size: 20px;
     font-weight: bold;
-    padding-top: $spacing6;
-    padding-bottom: $spacing2;
+    // padding-top: $spacing6;
+    // padding-bottom: $spacing2;
   }
 
   .m-topHighlights__showMore__container {
