(fix): visual regression

--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -16,15 +16,13 @@
     <div class="m-pageLayoutPane__inner">
       <div class="m-pageLayoutPane__sticky" m-stickySidebar>
         <!-- SIDEBAR ------------------------------------->
-        <m-discovery__disclaimer
-          *ngIf="!session.isLoggedIn()"
-        ></m-discovery__disclaimer>
+        <ng-container *ngIf="!session.isLoggedIn()">
+          <m-discovery__disclaimer></m-discovery__disclaimer>
 
-        <div class="m-spacer"></div>
+          <div class="m-spacer"></div>
 
-        <m-onboardingProgressWidget
-          *ngIf="session.isLoggedIn()"
-        ></m-onboardingProgressWidget>
+          <m-onboardingProgressWidget></m-onboardingProgressWidget>
+        </ng-container>
 
         <m-language__sidebarPrompt></m-language__sidebarPrompt>
 
