--- a/src/app/modules/ads/ads.ng.scss
+++ b/src/app/modules/ads/ads.ng.scss
@@ -11,4 +11,14 @@
       border-top: none !important;
     }
   }
+
+  .m-adsBoost__header {
+    margin: 0;
+    font-size: 13px;
+    font-weight: 600;
+    padding: 0 8px;
+    @include m-theme() {
+      color: themed($m-textColor--primary);
+    }
+  }
 }
