Remove references to channel-recommendations experiment #5401

--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -36,7 +36,7 @@
     <!-- ----------------------------------------- -->
     <!-- WIDGET: CHANNEL RECOMMENDATION -->
     <!-- ----------------------------------------- -->
-    <ng-container *mExperiment="'channel-recommendations'; variation: true">
+    <ng-container *mExperiment="'minds-2933-channelrecs'; variation: true">
       <m-channelRecommendation
         [title]="channelRecommendationTitle"
         location="channel"
