Fix issue where channel tags edit is unresponsive to clicks when max tag limit is reached #5447

--- a/src/app/modules/hashtags/typeahead-input/typeahead-input.component.scss
+++ b/src/app/modules/hashtags/typeahead-input/typeahead-input.component.scss
@@ -12,6 +12,10 @@ m-hashtags__typeaheadInput {
     &:focus {
       outline: none;
     }
+
+    &.m-hashtagsTypeaheadInput__input--disabled:focus {
+      border: 1px solid red !important;
+    }
   }
 
   .m-hashtagsTypeaheadInput__list {
