--- a/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/toolbar/toolbar.component.ng.scss
@@ -151,7 +151,7 @@
         cursor: pointer;
 
         .minds-counter {
-          @include body2Bold;
+          @include body2Medium;
         }
 
         i.material-icons {
