--- a/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity-v2/content/content.component.ng.scss
@@ -578,12 +578,16 @@
     hr {
       display: none;
     }
+
     .m-translation-wrapper {
       padding-bottom: 0;
       .message {
         a {
-          font-weight: 400;
+          font-weight: 500;
           font-size: inherit;
+        }
+        span {
+          white-space: break-spaces;
         }
       }
     }
